# tensorvault

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: linear_regression.py  mnist_mlp.py
tensorvault/: __init__.py  tensor.py
tensorvault/data/: __init__.py
tensorvault/nn/: __init__.py  activations.py  container.py  conv.py  embedding.py  init.py  linear.py  loss.py  module.py  normalization.py  rnn.py
tensorvault/ops/: activations.py  basic.py  indexing.py  manipulation.py  math.py  reductions.py  shape.py
tensorvault/optim/: __init__.py
tests/: test_tensor.py
