[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "tensorvault"
version = "0.2.0"
description = "A from-scratch deep learning framework with automatic differentiation, GPU support, and neural network modules"
authors = [
    { name = "Diablo", email = "diablo@venixlabs.dev" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["deep-learning", "autograd", "neural-networks", "machine-learning", "education"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
gpu = ["cupy>=12.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]
examples = [
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
]

[project.urls]
Homepage = "https://github.com/Luv-Goel/tensorvault"
Repository = "https://github.com/Luv-Goel/tensorvault"
Documentation = "https://github.com/Luv-Goel/tensorvault#readme"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
